# catboss

./: GPU_FIX_GUIDE.md  README.md  benchmark_ms_reads.py  profile_pooh.py  pyproject.toml  setup.py.bak  test_gpu.py  test_simple_taql.py
src/catboss/: cli.py  logger.py
src/catboss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/catboss/nami/: .gitignore  ARCHITECTURE.md  CPP_IMPLEMENTATION.md  MANIFEST.in  README.md  RECOMMENDED_APPROACH.md  find_casacore.py  pyproject.toml  requirements.txt  setup.py
src/catboss/nami/.github/workflows/: build_wheels.yml
src/catboss/nami/nami/: __init__.py  core_functions.py  navigator.py  timing.py
src/catboss/nami/nami/cpp/: data_collection.cpp  data_collection.h  nami_core.cpp  outlier_detection.cpp  outlier_detection.h  polynomial_fit.cpp  polynomial_fit.h  spline_fit.cpp  spline_fit.h  uv_calc.cpp  uv_calc.h
src/catboss/pooh/: bp.py  pooh.py
